Closed
Bug 1339816
Opened 8 years ago
Closed 8 years ago
Update cubeb from upstream to 8977c13b
Categories
(Core :: Audio/Video: cubeb, defect, P1)
Core
Audio/Video: cubeb
Tracking
()
VERIFIED
FIXED
mozilla54
People
(Reporter: achronop, Assigned: achronop)
References
Details
Attachments
(2 files)
20.45 KB,
patch
|
padenot
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
63.98 KB,
patch
|
padenot
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Update cubeb from upstream to 581d4bc
Assignee | ||
Updated•8 years ago
|
Rank: 15
Priority: -- → P1
Assignee | ||
Comment 1•8 years ago
|
||
Assignee | ||
Comment 2•8 years ago
|
||
Added more fixes for drift scenarios, update to 8977c13b
Summary: Update cubeb from upstream to 581d4bc → Update cubeb from upstream to 8977c13b
Assignee | ||
Comment 3•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/9416a107fa60f31c745acf7821b52cd5a8ef8e98
Bug 1339816 - Update cubeb from upstream to 8977c13b. r=padenot
Pushed by kwierso@gmail.com:
https://hg.mozilla.org/mozilla-central/rev/797fddcea4e0
Update cubeb from upstream to 8977c13b. r=padenot a=needmacnightlyrespin
Comment 5•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment 6•8 years ago
|
||
bugherder |
Assignee | ||
Comment 10•8 years ago
|
||
I prepared a patch for uplift to Aurora. Here are the try runs:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0f285640ea452a219b4cb5dc4e52d58bf4d69ab5
https://treeherder.mozilla.org/#/jobs?repo=try&revision=db2eedd376d82699ec0d780e10f2a600450af39c
I have also tested manually in OSX and windows. I will upload the patch tomorrow and request for approval.
Assignee | ||
Comment 11•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: bug 1335494, bug 1329190, bug 1321714 and more drift issue reported in IRC
[User impact if declined]: Drift issues which can cause delay or "scratchy" mic
audio, depending on the direction and type of drift.
[Is this code covered by automated tests?]: requires manual QA (repeated gum
tests on real HW for long call ~10mins)
[Has the fix been verified in Nightly?]: Yes, this fix is landed in Nightly
[Needs manual test from QE? If yes, steps to reproduce]: See bug 1335494 and bug 1329190
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: I have done extensive manual tests in Nightly and Aurora in addition it is landed in Nightly and no issue so far.
[String changes made/needed]: none
Attachment #8839371 -
Flags: review?(padenot)
Attachment #8839371 -
Flags: approval-mozilla-aurora?
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → achronop
Assignee | ||
Comment 12•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: bug 1335494, bug 1329190, bug 1321714 and more drift issue reported in IRC
[User impact if declined]: Drift issues which can cause delay or "scratchy" mic
audio, depending on the direction and type of drift.
[Is this code covered by automated tests?]: requires manual QA (repeated gum
tests on real HW for long call ~10mins)
[Has the fix been verified in Nightly?]: Yes, this fix is landed in Nightly
[Needs manual test from QE? If yes, steps to reproduce]: See bug 1335494 and bug 1329190
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: I have done extensive manual tests in Nightly and Aurora in addition it is landed in Nightly and no issue so far.
[String changes made/needed]: none
Attachment #8839372 -
Flags: review?(padenot)
Attachment #8839372 -
Flags: approval-mozilla-aurora?
Assignee | ||
Updated•8 years ago
|
Attachment #8839372 -
Attachment description: audiounit-drift-fix → Bug 1339816 - Part 2: Uplift cubeb audiounit drift fix. r?padenot a=?
Attachment #8839372 -
Attachment is patch: true
Updated•8 years ago
|
Attachment #8839371 -
Flags: review?(padenot) → review+
Updated•8 years ago
|
Attachment #8839372 -
Flags: review?(padenot) → review+
Updated•8 years ago
|
status-firefox53:
--- → affected
Comment 13•8 years ago
|
||
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(brindusa.tot)
Comment 14•8 years ago
|
||
Verified on Mac OS X 10.10 with FF Nighlty 54.0a1(2017-02-23) and I can confirm the fix. I used the steps from https://bugzilla.mozilla.org/show_bug.cgi?id=1335494#c0.
Comment 15•8 years ago
|
||
Comment on attachment 8839371 [details] [diff] [review]
Bug 1339816 - Part 1: Uplift cubeb wasapi drift fix and passthrough resampler. r?padenot a=?
Fix audio issue by updating cubeb and was verified. Aurora53+.
Attachment #8839371 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•8 years ago
|
Attachment #8839372 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 16•8 years ago
|
||
Comment 17•8 years ago
|
||
(In reply to Alex Chronopoulos [:achronop] from comment #16)
> https://hg.mozilla.org/releases/mozilla-aurora/rev/
> 2d1a7803246bcd64518df53db07108b9da97d848
> https://hg.mozilla.org/releases/mozilla-aurora/rev/
> 1c202d2bb24197c9f31d96998477f485acc85be4
setting flags
You need to log in
before you can comment on or make changes to this bug.
Description
•