Bug 1339816 - Update cubeb from upstream to 8977c13b. r=padenot a=needmacnightlyrespin

MozReview-Commit-ID: 942LCa6dOzJ